testing in progress - 19 MAR

--- a/assets/php/settings/templates/templates-logs_path.html
+++ b/assets/php/settings/templates/templates-logs_path.html
@@ -21,7 +21,7 @@
 
         {{/if}}
 		
-		<p id="pathsettingnote"> <i class="fas fa-info-triangle"> </i>  Can be dynamic - see <a class='footer pathsettingnotelink' href='https://github.com/Monitorr/logarr/wiki/Settings#dynamic-paths' target='_blank' title="Logarr Wiki">wiki</a> </p>
+		<p id="pathsettingnote"> <i class="fas fa-info-triangle"> </i>  Can be dynamic - see <a class='footer pathsettingnotelink' href='https://github.com/Monitorr/logarr/wiki/04-Logarr-Settings' target='_blank' title="Logarr Wiki">wiki</a> </p>
 
     </div>
 
