--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -10,7 +10,6 @@ body {
     -webkit-font-smoothing: antialiased;
     font-family: 'Roboto:400', sans-serif !important;
     color: #FFFFFF;
-    /* margin-bottom: 6rem; */
     padding: 10px 10px 0;
 }
 
@@ -137,7 +136,6 @@ td {
 
 tbody {
     background-color: transparent;
-    /* cursor: pointer; */
 }
 
 tr {
@@ -298,7 +296,6 @@ h6,
     cursor: default;
 }
 
-/* TODO: */
 #synctimeerror {
     color: red;
     position: fixed;
@@ -341,7 +338,6 @@ h6,
     display: flex;
     position: relative;
     flex-direction: row;
-    /* height: 9rem; */
     width: 17rem;
     margin-bottom: 1rem;
     padding: 1rem;
@@ -652,7 +648,6 @@ select.form-control {
 .input:hover,
 input.form-control:hover,
 select.form-control:hover {
-    /* border-color: #007bff; */
     border: .2rem solid #007bff;
 }
 
@@ -1038,12 +1033,10 @@ input[type="checkbox"] {
 }
 
 #modalContent {
-    /* padding-top: .5rem; */
     color: #C8C8C8;
     padding-bottom: 0;
     align-items: center;
     white-space: nowrap;
-    /* font-size: 1.2vw; */
     cursor: default;
 }
 
@@ -1402,7 +1395,6 @@ ul.nav.sidebar-nav>li>a>i {
 }
 
 #reloadtitle {
-    /* color: rgba(255, 255, 0, 0.5) !important; */
     color: yellow !important;
     font-weight: 600;
     margin-bottom: .5rem;
@@ -1594,18 +1586,14 @@ ul.nav.sidebar-nav>li>a>i {
     float: left;
     text-align: left;
     vertical-align: middle;
-    /* width: 40%; */
     margin-left: 1em;
     padding-bottom: 0;
     top: 15vh;
 }
 
 #settingsbrand {
-    /* max-width: 17em; */
     width: 100%;
-    /* margin-bottom: 1rem; */
     padding: .5rem 0 0;
-    /* font-size: 1.5em !important; */
     text-align: center;
     cursor: default;
 }
@@ -1653,14 +1641,12 @@ ul.nav.sidebar-nav>li>a>i {
     float: right;
     width: calc(100% - 20rem);
     margin-top: 5rem;
-    /* margin-bottom: 3rem; */
     height: 100%;
 }
 
 .object {
     float: right;
     width: 100%;
-    /* height: 58rem; */
     height: 85vh;
 }
 
@@ -1704,7 +1690,6 @@ ul.nav.sidebar-nav>li>a>i {
 #infodata>.table {
     margin-bottom: auto;
     border-bottom: 1px solid #dee2e6;
-    ;
     cursor: default;
 }
 
@@ -1774,7 +1759,6 @@ ul.nav.sidebar-nav>li>a>i {
 #siteform {
     width: 100%;
     margin-left: 5vw;
-    /* margin-right: 5vw; */
     background-color: inherit;
 }
 
@@ -1990,8 +1974,17 @@ ul.nav.sidebar-nav>li>a>i {
 }
 
 .infotitle {
-    font-size: 1.1em;
+    font-size: 1.1rem;
     font-weight: 700;
+}
+
+.updatebtn {
+    font-size: .75rem !important;
+}
+
+.resourceimg {
+    width: auto !important;
+    height: 1.2rem !important;
 }
 
 .releasebadge {
@@ -2124,6 +2117,7 @@ div[data-alpaca-container-item-name="category"] {
     margin: 2rem auto;
     width: 75%;
     padding: 2rem;
+    padding-top: 1rem;
 }
 
 #configuration-container {
@@ -2135,7 +2129,6 @@ div[data-alpaca-container-item-name="category"] {
 }
 
 #login-container {
-    /* position: fixed; */
     margin: 0 auto;
     justify-content: center;
     text-align: center;
@@ -2187,7 +2180,6 @@ div[data-alpaca-container-item-name="category"] {
 }
 
 #login-form {
-    /* width: 50%; */
     margin: auto;
 }
 
@@ -2308,10 +2300,6 @@ h2.heading {
     border: .2rem solid #e74c3c !important;
 }
 
-/* .fv-success {
-    border: .2rem solid #4B763D !important;
-} */
-
 .fv-error-message {
     color: #e74c3c;
     margin-bottom: 1%;
@@ -2390,8 +2378,17 @@ h2.heading {
     cursor: default;
 }
 
+.configheader {
+    margin-bottom: 1.5rem !important;
+}
+
 #datadirform {
     margin: 1em;
+}
+
+#configpath {
+    margin-left: 0;
+    margin-top: .5rem;
 }
 
 #datadirbtn {
@@ -2399,7 +2396,7 @@ h2.heading {
 }
 
 #usernext {
-    width: 5em;
+    width: 6em;
     margin-left: 1rem;
     background-color: green;
 }
@@ -2531,7 +2528,6 @@ h2.heading {
 
     #sidebar-wrapper {
         width: 100%;
-
     }
 
     .settingstitle {
@@ -2550,6 +2546,11 @@ h2.heading {
         direction: ltr;
         left: auto;
         right: auto;
+    }
+
+    .alpaca-field-object {
+        justify-content: center;
+        margin: auto;
     }
 
     #tdleft,
@@ -2631,7 +2632,6 @@ object {
 
 .releaseHeader a {
     vertical-align: middle;
-    /* margin: 0 1.5rem 1.5rem; */
     font-size: 2rem;
     font-weight: 700;
     text-shadow: 0.1rem 0.1rem black;
@@ -2734,9 +2734,7 @@ object {
 }
 
 .loginversion {
-    /* display: flex; */
     position: fixed;
-    /* flex-direction: row; */
     width: 100%;
     max-width: 17rem;
     margin: 0;
