--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -645,6 +645,11 @@ select.form-control {
     border: .2rem solid rgb(90, 90, 90);
 }
 
+#alpaca7 {
+    width: auto;
+    max-width: 20rem;
+}
+
 .input:hover,
 input.form-control:hover,
 select.form-control:hover {
@@ -1376,6 +1381,8 @@ ul.nav.sidebar-nav>li>a>i {
     -o-transition: all .8s ease;
     -ms-transition: all .8s ease;
     transition: all .8s ease;
+    overflow: hidden;
+    overflow-y: hidden !important;
 }
 
 .toastlink {
@@ -1413,7 +1420,6 @@ ul.nav.sidebar-nav>li>a>i {
     transition: all .3s ease;
 }
 
-
 /* Modal Content/Box */
 
 .modal-content {
@@ -1439,6 +1445,25 @@ ul.nav.sidebar-nav>li>a>i {
     cursor: pointer;
     font-weight: 900;
 }
+
+/* Tooltips: */
+
+.ui-tooltip {
+    /* background: black; */
+    /* background-color: rgba(0, 0, 0, 0.750); */
+    background: rgba(50, 1, 25, 0.90);
+    border: .1em solid #C8C8C8 !important;
+    padding: 10px 20px;
+    color: white;
+    width: auto;
+    /* color: #C8C8C8; */
+    border-radius: .2em;
+    /* font: bold 14px "Helvetica Neue", Sans-Serif; */
+    /* text-transform: uppercase; */
+    box-shadow: 0 0 7px black;
+    cursor: default;
+}
+
 
 #checkurl {
     float: right;
@@ -3012,7 +3037,7 @@ ul.stepper li.warning a .circle {
 }
 
 ul.stepper li.success a .circle {
-    background-color: #43A047 !important;
+    background-color: #43A047;
 }
 
 .stepper-target {
