testing in progress - 11 APR

--- a/assets/php/settings/templates/authentication/templates-authentication_settingsenabled.html
+++ b/assets/php/settings/templates/authentication/templates-authentication_settingsenabled.html
@@ -7,7 +7,7 @@
 
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="settingsenabled_icon" title="Enable authentication for the settings page."> </i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="settingsenabled_icon" title="Enable authentication for the Settings page."> </i>
 
         </label>
 
