--- a/assets/php/settings/templates/settings/templates-settings_customhighlighterms.html
+++ b/assets/php/settings/templates/settings/templates-settings_customhighlighterms.html
@@ -7,7 +7,7 @@
 
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="customhighlighterms_input_icon" title="Highlight these terms. ('Auto Highlight' must be set to TRUE)."> </i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="customhighlighterms_input_icon" title="Highlight these terms. (NOTE: Terms must be comma separated and 'Auto Highlight' must be set to TRUE. Instructions for setting custom highlight colors can be found on the Logarr Wiki.)"> </i>
 
         </label>
 
