--- a/assets/php/settings/templates/settings/templates-settings_jumponsearch.html
+++ b/assets/php/settings/templates/settings/templates-settings_jumponsearch.html
@@ -7,7 +7,7 @@
 
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="jumponsearch_icon" title="Jump to 1st search result when a search is performed."> </i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="jumponsearch_icon" title="Jump to first search result when a search is performed."> </i>
 
         </label>
 
