--- a/assets/php/settings/templates/settings/templates-settings_maxlines.html
+++ b/assets/php/settings/templates/settings/templates-settings_maxlines.html
@@ -7,7 +7,7 @@
 
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="maxlines_input_icon" title="Default line maximum for logs."> </i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="maxlines_input_icon" title="Default maximum line display for all logs."> </i>
 
         </label>
 
