Update: PHP - 30 DEC

--- a/assets/php/settings/templates/settings/templates-settings_logrefresh.html
+++ b/assets/php/settings/templates/settings/templates-settings_logrefresh.html
@@ -7,6 +7,7 @@
 
             {{{options.label}}}
 
+            <!-- TODO: Add warning about log refresh interval - i.e. 10s / per log file -->
             <!-- <i class="fa fa-fw fa-question-circle input_icon" id="logrefresh_icon" title="Automatically Refresh Logs."> </i> -->
 
         </label>
