--- a/assets/php/settings/templates/templates-user-preferences_updatebranch.html
+++ b/assets/php/settings/templates/templates-user-preferences_updatebranch.html
@@ -7,7 +7,7 @@
 
             {{{options.label}}}
 
-            <i class="fa fa-fw fa-question-circle input_icon" id="updatebranch_icon" title="Logarr repo branch to use when updating."> </i>
+            <i class="fa fa-fw fa-question-circle input_icon" id="updatebranch_icon" title="Logarr GitHub repo branch to use when updating."> </i>
 
         </label>
 
