--- a/assets/php/settings/templates/templates-logs_category.html
+++ b/assets/php/settings/templates/templates-logs_category.html
@@ -3,7 +3,7 @@
     <div id="category_option">
 
         {{#if options.label}}
-        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label" for="{{id}}">
+        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label categorylabel" for="{{id}}">
             
             {{{options.label}}}
 
