--- a/assets/php/settings/templates/templates-logs_path.html
+++ b/assets/php/settings/templates/templates-logs_path.html
@@ -3,7 +3,7 @@
     <div id="path_input">
 
         {{#if options.label}}
-        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label" for="{{id}}">
+        <label class="{{#if options.labelClass}}{{options.labelClass}}{{/if}} alpaca-control-label path_input-label" for="{{id}}">
             
             {{{options.label}}}
 
