--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -388,11 +388,6 @@ h6,
     margin-right: 1em;
 }
 
-/* .righttop {
-    text-align: right;
-    margin-bottom: .5rem
-} */
-
 .righttop {
     text-align: right;
     /* margin-bottom: .5rem; */
@@ -404,13 +399,6 @@ h6,
     cursor: default;
 }
 
-/* .rightmiddle {
-    position: relative;
-    text-align: right;
-    margin-top: 3.8rem;
-    z-index: 6000;
-} */
-
 
 .rightmiddle {
     text-align: right;
@@ -419,26 +407,11 @@ h6,
     z-index: 6000;
 }
 
-
-/* #rightbottom {
-    float: right;
-    width: 16rem;
-    text-align: right;
-    margin-top: .75rem;
-    margin-right: .4rem;
-    height: auto;
-    cursor: default;
-} */
-
 #rightbottom {
     position: absolute;
-    /* display: inline-flex; */
-    /* text-align: right; */
     right: 0;
-    /* margin-bottom: .5rem; */
-    margin-top: 4rem;
+    margin-top: 4.5rem;
     margin-right: 5rem;
-    z-index: 6000;
 }
 
 
@@ -952,6 +925,11 @@ input[type=search]::-webkit-search-cancel-button {
     display: inline-flex;
     color: #C8C8C8;
     margin: 0;
+    cursor: default;
+}
+
+#logmaxlines {
+    display: none;
     cursor: default;
 }
 
